HSE_carbon_assisted/range_param_test/reference/N2/N2_ABINIT/sprc-calc.eigen
Final eigenvalues and occupation numbers

kred #1 = (0.000000,0.000000,0.000000)
weight = 1.000000
n        eigval                 occ
1       -1.156547399472E+00     2.000000000000
2       -5.719331098251E-01     2.000000000000
3       -4.788861288234E-01     2.000000000000
4       -4.788861285872E-01     2.000000000000
5       -4.422857114535E-01     1.999999999400
6       -4.916064240766E-02     0.000000000000
7       -4.916062181239E-02     0.000000000000
8        1.807198994644E-02     0.000000000000
9        4.966393878137E-02     0.000000000000
10       4.994828025825E-02     0.000000000000
11       4.995027896962E-02     0.000000000000
